# wtlog

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
example/: CMakeLists.txt  example.cpp
include/: wtlog.hpp
include/wtlog/: LogDef.hpp  LogImpl.hpp  LogScheduler.hpp  LogWriter.hpp  async_logger.h  logger.h  wtlog.h  wtlog.hpp
include/wtlog/details/: log_carrier.h  log_clock.h  log_typedef.h  log_utils.h
include/wtlog/impl/: LogBuffer.hpp  LogConfig.hpp  LogDef.hpp  LogImpl.hpp  LogScheduler.hpp  LogUtils.hpp  LogWriter.hpp
include/wtlog/sinks/: console_sinker.h  file_sinker.h  sink_distributor.h  sink_splitter.h  sinker.h
src/: CMakeLists.txt  LogBuffer.cpp  LogDef.cpp  LogManager.cpp  LogScheduler.cpp  LogWriter.cpp  console_sinker.cpp  file_sinker.cpp  log_carrier.cpp  log_clock.cpp  log_utils.cpp  logger.cpp  sink_distributor.cpp  sink_splitter.cpp  sinker.cpp  wtlog.cpp
test/: CMakeLists.txt  carrier_test.cpp  clock_test.cpp  includes.h  main.cpp  simple_carrier_test.cpp  test.cpp
